--- a/src/style.css
+++ b/src/style.css
@@ -37,12 +37,17 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  color: #ffffff;
+  color: #000;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.hero-text,
+.hero-subtext {
+  color: #fff;
 }
 
 .container {
