--- a/src/style.css
+++ b/src/style.css
@@ -40,11 +40,6 @@ h6 {
   color: #000;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 .hero-text,
 .hero-subtext {
   color: #ffe81f;
@@ -58,6 +53,7 @@ h1 {
   display: flex;
   flex-direction: column;
   position: relative;
+  text-align: center;
 }
 
 .hero-text-container {
@@ -70,7 +66,6 @@ h1 {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  width: 600px;
 }
 
 #app {
