--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Protest Strike", Inter, system-ui, Avenir, Helvetica, Arial,
+  font-family: "Exo", "Protest Strike", sans-serif,
     sans-serif;
   line-height: 1.5;
   font-weight: 400;
