update prettier config

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,6 +1,5 @@
 :root {
-  font-family: "Exo", "Protest Strike", sans-serif,
-    sans-serif;
+  font-family: "Exo", "Protest Strike", sans-serif, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
