--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -13,15 +13,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -36,7 +27,6 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
-  color: #000;
 }
 
 .hero-text,
@@ -44,25 +34,11 @@ h6 {
   color: #ffe81f;
 }
 
-/* .hero-text {
-  position: relative;
-  background-image: -webkit-linear-gradient(#032d50 25%, #00a1ef 35%, white 50%, #20125f 50%, #8313e7 55%, #ff61af 75%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 4px #f5f5f5;
-  font-size: 100px;
-  font-family: 'Titillium Web', sans-serif;
-  font-style: italic;
-  margin: 0;
-  line-height: 1;
-} */
-
 .container {
   margin: 0;
   padding: 0;
   height: 100vh;
-  flex: 1;
+  width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -81,13 +57,20 @@ h6 {
   margin-right: auto;
 }
 
+.canvas-container {
+  width: 100%;
+  height: 100%;
+}
+
 #app {
-  max-width: 1280px;
+  width: 760px;
   margin: 0 auto;
+  padding: 0;
   padding: 2rem;
   text-align: center;
 }
 
+/* Button styles */
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -118,4 +101,15 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+/* Anchor styles */
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+
+a:hover {
+  color: #535bf2;
 }
