--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -57,13 +63,20 @@ h6 {
   margin-right: auto;
 }
 
-.canvas-container {
+.playground-container {
   width: 100%;
   height: 100%;
 }
 
+.automata-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin-top: 1rem;
+}
+
 #app {
-  width: 760px;
   margin: 0 auto;
   padding: 0;
   padding: 2rem;
