--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Exo", "Protest Strike", sans-serif, sans-serif;
+  font-family: "Exo", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -22,7 +22,7 @@
 body {
   margin: 0;
   padding: 0;
-  display: flex;
+  overflow: hidden;
 }
 
 h1,
@@ -66,14 +66,6 @@ h6 {
 .playground-container {
   width: 100%;
   height: 100%;
-}
-
-.automata-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  margin-top: 1rem;
 }
 
 #app {
